FIX: Uneven space around BEGIN button

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -181,6 +181,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 1.5em;
+  margin-bottom: 34px;
 }
 
 .row > * {
